Slightly better EventLoop based CAN support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14...3.22)
+cmake_minimum_required(VERSION 3.14...3.26)
 
 # ---- Project ----
 
@@ -6,7 +6,8 @@ cmake_minimum_required(VERSION 3.14...3.22)
 project(
   DPFlow
   VERSION 1.0
-  LANGUAGES CXX
+  DESCRIPTION "DataPanel Flow"
+  LANGUAGES C CXX
 )
 
 # ---- Include guards ----
@@ -18,75 +19,45 @@ if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
   )
 endif()
 
+set(GLOBAL PROPERTY USE_FOLDERS ON)
+
 # ---- Add dependencies via CPM ----
 # see https://github.com/TheLartians/CPM.cmake for more info
 
 include(cmake/CPM.cmake)
 
-# PackageProject.cmake will be used to make our target installable
-CPMAddPackage("gh:TheLartians/PackageProject.cmake@1.8.0")
+CPMAddPackage("gh:fmtlib/fmt#9.1.0")
 
 CPMAddPackage(
-  NAME fmt
-  GIT_TAG 9.1.0
-  GITHUB_REPOSITORY fmtlib/fmt
-  OPTIONS "FMT_INSTALL YES" # create an installable target
+  GITHUB_REPOSITORY gabime/spdlog
+  VERSION 1.11.0
+  OPTIONS "SPDLOG_FMT_EXTERNAL 1"
 )
 
 CPMAddPackage(
-    NAME loguru
-    GIT_TAG "4adaa18"
-    GITHUB_REPOSITORY emilk/loguru
-    OPTIONS "LOGURU_WITH_STREAMS TRUE" "LOGURU_INSTALL YES"
+  GITHUB_REPOSITORY Neargye/magic_enum
+  VERSION 0.8.2
+  OPTIONS "MAGIC_ENUM_OPT_INSTALL ON"
 )
 
 CPMAddPackage(
-  NAME sol2
-  GIT_TAG "v3.3.0"
-  GITHUB_REPOSITORY ThePhD/sol2
+  NAME libsocketcan
+  GIT_REPOSITORY https://git.pengutronix.de/git/tools/libsocketcan
+  VERSION 0.0.12
+  DOWNLOAD_ONLY YES
 )
+
+if (libsocketcan_ADDED)
+  add_library(libsocketcan STATIC ${libsocketcan_SOURCE_DIR}/src/libsocketcan.c)
+
+  target_include_directories(libsocketcan
+    PUBLIC
+      $<BUILD_INTERFACE:${libsocketcan_SOURCE_DIR}>/include
+  )
+endif()
 
 # ---- Add source files ----
 
-# Note: globbing sources is considered bad practice as CMake's generators may not detect new files
-# automatically. Keep that in mind when changing files, or explicitly mention them here.
-file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
-file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
+add_subdirectory(src)
 
-# ---- Create library ----
-
-# Note: for header-only libraries change all PUBLIC flags to INTERFACE and create an interface
-# target: add_library(${PROJECT_NAME} INTERFACE)
-add_library(${PROJECT_NAME} ${headers} ${sources})
-set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
-
-# being a cross-platform target, we enforce standards conformance on MSVC
-target_compile_options(${PROJECT_NAME} PUBLIC "$<$<COMPILE_LANG_AND_ID:CXX,MSVC>:/permissive->")
-
-# Link dependencies
-target_link_libraries(${PROJECT_NAME} PRIVATE fmt::fmt loguru::loguru lua ${LUA_LIBRARIES})
-
-target_include_directories(
-  ${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-                         $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
-                         loguru::loguru
-)
-
-# ---- Create an installable target ----
-# this allows users to install and find the library via `find_package()`.
-
-# the location where the project's version header will be placed should match the project's regular
-# header paths
-string(TOLOWER ${PROJECT_NAME}/version.h VERSION_HEADER_LOCATION)
-
-packageProject(
-  NAME ${PROJECT_NAME}
-  VERSION ${PROJECT_VERSION}
-  NAMESPACE ${PROJECT_NAME}
-  BINARY_DIR ${PROJECT_BINARY_DIR}
-  INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include
-  INCLUDE_DESTINATION include/${PROJECT_NAME}-${PROJECT_VERSION}
-  VERSION_HEADER "${VERSION_HEADER_LOCATION}"
-  COMPATIBILITY SameMajorVersion
-  DEPENDENCIES "fmt 9.1.0"
-)
+add_subdirectory(apps)
