--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14...3.22)
 
-project(DPFlowTests LANGUAGES CXX)
+project(dplibtests LANGUAGES CXX)
 
 # ---- Options ----
 
@@ -16,30 +16,13 @@ include(../cmake/tools.cmake)
 include(../cmake/CPM.cmake)
 
 CPMAddPackage("gh:doctest/doctest@2.4.9")
-CPMAddPackage("gh:TheLartians/Format.cmake@1.7.3")
-
-if(TEST_INSTALLED_VERSION)
-  find_package(DPFlow REQUIRED)
-else()
-  CPMAddPackage(NAME DPFlow SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
-endif()
 
 # ---- Create binary ----
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
 add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} doctest::doctest DPFlow::DPFlow)
+target_link_libraries(${PROJECT_NAME} doctest::doctest dplib)
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 17)
-
-# enable compiler warnings
-if(NOT TEST_INSTALLED_VERSION)
-  if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
-    target_compile_options(DPFlow PUBLIC -Wall -Wpedantic -Wextra -Werror)
-  elseif(MSVC)
-    target_compile_options(DPFlow PUBLIC /W4 /WX)
-    target_compile_definitions(${PROJECT_NAME} PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
-  endif()
-endif()
 
 # ---- Add DPFlowTests ----
 
@@ -51,10 +34,3 @@ enable_testing()
 
 include(${doctest_SOURCE_DIR}/scripts/cmake/doctest.cmake)
 doctest_discover_tests(${PROJECT_NAME})
-
-# ---- code coverage ----
-
-if(ENABLE_TEST_COVERAGE)
-  target_compile_options(DPFlow PUBLIC -O0 -g -fprofile-arcs -ftest-coverage)
-  target_link_options(DPFlow PUBLIC -fprofile-arcs -ftest-coverage)
-endif()
